--- a/BOMdialog.ui
+++ b/BOMdialog.ui
@@ -14,8 +14,6 @@
    <string>BOM 管理</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
-
-   <!-- BOM 名称 -->
    <item>
     <layout class="QHBoxLayout" name="bomNameLayout">
      <item>
@@ -30,23 +28,55 @@
      </item>
     </layout>
    </item>
-
-   <!-- 物料清单表格 -->
+   <item>
+    <layout class="QHBoxLayout" name="bomDescriptionLayout">
+     <item>
+      <widget class="QLabel" name="bomDescriptionLabel">
+       <property name="text">
+        <string>描述：</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QTextEdit" name="bomDescriptionTextEdit">
+       <property name="minimumHeight">
+        <number>60</number>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="bomRemarksLayout">
+     <item>
+      <widget class="QLabel" name="bomRemarksLabel">
+       <property name="text">
+        <string>备注：</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QTextEdit" name="bomRemarksTextEdit">
+       <property name="minimumHeight">
+        <number>60</number>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
    <item>
     <widget class="QTableView" name="materialTableView">
+     <property name="editTriggers">
+      <set>QAbstractItemView::EditTrigger::NoEditTriggers</set>
+     </property>
      <property name="selectionMode">
-      <enum>QAbstractItemView::SingleSelection</enum>
+      <enum>QAbstractItemView::SelectionMode::SingleSelection</enum>
      </property>
      <property name="selectionBehavior">
-      <enum>QAbstractItemView::SelectRows</enum>
-     </property>
-     <property name="editTriggers">
-      <enum>QAbstractItemView::NoEditTriggers</enum>
+      <enum>QAbstractItemView::SelectionBehavior::SelectRows</enum>
      </property>
     </widget>
    </item>
-
-   <!-- 添加和删除物料按钮 -->
    <item>
     <layout class="QHBoxLayout" name="materialButtonLayout">
      <item>
@@ -65,8 +95,6 @@
      </item>
     </layout>
    </item>
-
-   <!-- 总成本显示 -->
    <item>
     <layout class="QHBoxLayout" name="totalCostLayout">
      <item>
@@ -85,8 +113,6 @@
      </item>
     </layout>
    </item>
-
-   <!-- 操作按钮 -->
    <item>
     <layout class="QHBoxLayout" name="buttonLayout">
      <item>
@@ -105,7 +131,6 @@
      </item>
     </layout>
    </item>
-
   </layout>
  </widget>
  <resources/>
